# greentic-dev

./: .gitignore  Cargo.toml  README.md  RELEASING.md  SECURITY_FIX_REPORT.md  global_rules.md  pr-changed-files.txt  pr-comment.md  rust-toolchain.toml
.codex/: PR-01.md  PR-03.md  PR-GHCR-TOOLCHAIN-GREENTIC-DEV-INSTALL.md  PR-GHCR-TOOLCHAIN-GREENTIC-DEV-RELEASE.md  repo_overview.md
.github/workflows/: ci.yml  codex-security-fix.yml  crates-publish.yml  dev-publish.yml  nightly-semver.yml  nightly.yml  pages.yml  perf.yml  publish.yml  release-binaries.yml  release.yml
.i18n/: translator-state.json
assets/wizard-ui/: app.js  index.html  style.css
ci/: coverage.sh  i18n_check.py  local_check.sh  package_smoke.sh
crates/dev-runner/: Cargo.toml
crates/dev-runner/src/: runner.rs
crates/dev-viewer/: Cargo.toml
crates/dev-viewer/src/: main.rs
docs/: cli.md  config_flows.md  developer-guide.md  distributor.md  mocks.md  programmer-guide.md  runner.md  scaffolder.md
docs/audits/: component_move_plan.md  components_move_plan.md  components_semantics_in_dev.md  distributor_client_move_plan.md  flow_move_plan.md  flow_semantics_in_dev.md  greentic-dev-commercial-install.md
docs/wizard/: README.md  architecture.md  audit-pr-02-current-implementation.md  audit.md  dev-workbench.md
examples/flows/: min.ygtc
fixtures/components/com.greentic.demo.echo/: component.manifest.json
fixtures/components/dev.greentic.echo/: component.manifest.json  component.wasm
fixtures/components/greentic.repo_ui_actions_dummy/: component.manifest.json
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
patches/greentic-flow/greentic-flow-0.4.3/: .cargo_vcs_info.json  Cargo.toml
patches/greentic-flow/greentic-flow-0.4.3/src/: model.rs
patches/greentic-runner-host/greentic-runner-host-0.4.6/: .cargo_vcs_info.json  Cargo.toml  README.md
patches/greentic-runner-host/greentic-runner-host-0.4.6/src/: boot.rs  host.rs  pack.rs  runtime.rs  secrets.rs  watcher.rs
patches/greentic-runner-host/greentic-runner-host-0.4.6/src/engine/: state_machine.rs
scripts/: build_pages.py
src/: bundle_cmd.rs  cli.rs  component_add.rs  component_cli.rs  component_resolver.rs  config.rs  coverage_cmd.rs  distributor.rs  flow_cmd.rs  gui_dev.rs  i18n.rs  install.rs  lib.rs  main.rs  mcp_cmd.rs  pack_build.rs  pack_cli.rs  pack_init.rs  pack_run.rs  pack_temp.rs  passthrough.rs  path_safety.rs  release_cmd.rs  secrets_cli.rs  secrets_seed.rs  tests_exec.rs  toolchain_catalogue.rs
src/cmd/: component.rs  config.rs  mod.rs  pack.rs  tools.rs
src/delegate/: component.rs  mod.rs  packc.rs
src/dev_runner/: registry.rs  runner.rs  schema.rs  transcript.rs
src/util/: process.rs
src/wizard/: confirm.rs  executor.rs  mod.rs  persistence.rs  plan.rs  provider.rs  registry.rs
src/wizard/ui/: mod.rs
tests/: cli_examples.rs  cli_external_subcommand_fallback.rs  cli_i18n_audit.rs  cli_i18n_help.rs  cli_passthrough_help.rs  cli_release.rs  component_cli.rs  component_doctor.rs  component_exec_operation.rs  config_resolution.rs  dev_runner_schema.rs  developer_guide_e2e.rs  developer_guide_flow.rs  distributor_dev.rs  flow_add_step.rs  flow_missing_operation.rs  pack_cli_help.rs  pack_inspect.rs  pack_new_provider.rs  pack_smoke.rs  perf_scaling.rs  realism_l2.rs  realism_l21.rs  realism_l4.rs  realism_l4_1_cli.rs  realism_l4_1_weather.rs  wizard_cli.rs
tests/fixtures/dev-echo/: Cargo.toml
tests/fixtures/dev-echo/src/: lib.rs
tests/fixtures/external_mocks/: weatherapi_london_3days.json
tests/fixtures/hello-pack/: hello-flow.ygtc
tests/fixtures/real_components/: README.md  lock.json
tests/fixtures/real_components/adaptive_card/: component.wasm
tests/fixtures/real_components/templates/: component.wasm
tests/fixtures/real_components/weatherapi/: openweatherapi.component.wasm
tests/snapshots/: wizard_flow_create_plan.json  wizard_pack_build_plan.json
tests/support/: exec.rs  flow.rs  l3.rs  l4.rs  mod.rs  real_weather.rs
tools/: i18n.sh  refresh_real_components.sh
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: docs_ci.md  docs_config.md  docs_getting_started.md  docs_security.md  docs_testing.md
