[package]
name = "greentic-dev"
version = "0.5.0"
edition = "2024"
description = "Developer CLI and local tooling for Greentic flows, packs, and components"
license = "MIT"
repository = "https://github.com/greenticai/greentic-dev"
homepage = "https://greentic.ai/"
documentation = "https://docs.rs/greentic-dev"
# Ensure runtime assets ship with the crate.
include = [
    "build.rs",
    "i18n/**",
    "src/**",
    "templates/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[workspace]
members = ["xtask"]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.24"
ci = ["github"]
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[workspace.metadata.dist.package.greentic-dev]
all-features = false

[dependencies]
anyhow = "1.0"
async-compression = "0.4"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.11"
dirs = "6"
flate2 = "1"
greentic-component = { version = "0.5", features = ["prepare", "describe", "cli"] }
greentic-distributor-client = { version = "0.5", features = ["http-runtime", "pack-fetch"] }
greentic-flow = "0.5"
greentic-interfaces = { version = "0.5", default-features = false, features = ["describe-v1"] }
greentic-pack-lib = "0.5"
greentic-types = { version = "0.5", features = ["serde"] }
jsonschema = "0.45"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
once_cell = "1.19"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rpassword = "7"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5.2" }
sha2 = "0.11"
sys-locale = "0.3"
tar = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1"
toml_edit = "0.25"
unic-langid = "0.9"
which = "8"
wit-component = "0.246"
wit-parser = "0.246"
zip = { version = "8", default-features = false, features = ["deflate"] }

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1"
blake3 = "1"
criterion = "0.8"
greentic-secrets-api = "0.5"
httpmock = "0.8"
indexmap = "2"
predicates = "3"
walkdir = "2"

[[bench]]
name = "perf"
harness = false
