bench = [
    { name = "perf", harness = false },
]

[package]
name = "greentic-dev"
version = "0.5.0-dev.0"
edition = "2024"
description = "Developer CLI and local tooling for Greentic flows, packs, and components"
license = "MIT"
repository = "https://github.com/greenticai/greentic-dev"
homepage = "https://greentic.ai/"
documentation = "https://docs.rs/greentic-dev"
include = [
    "build.rs",
    "i18n/**",
    "src/**",
    "templates/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[workspace]
members = [
    "xtask",
]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.24"
ci = [
    "github",
]
installers = [
    "shell",
]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[workspace.metadata.dist.package.greentic-dev]
all-features = false

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
convert_case = "0.11"
serde_json = "1.0"
serde_cbor = "0.11"
toml = "1"
toml_edit = "0.25"
semver = "1"
sha2 = "0.11"
wit-component = "0.247"
wit-parser = "0.247"
base64 = "0.22"
greentic-flow = ">=0.5.0-dev, <0.6.0-0"
greentic-pack-lib = ">=0.5.0-dev, <0.6.0-0"
jsonschema = "0.46"
tempfile = "3"
dirs = "6"
which = "8"
bytes = "1.7"
async-compression = "0.4"
flate2 = "1"
tar = "0.4"
async-trait = "0.1"
rpassword = "7"
sys-locale = "0.3"
unic-langid = "0.9"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.time]
version = "0.3"
features = [
    "macros",
    "formatting",
]

[dependencies.greentic-interfaces]
version = ">=0.5.0-dev, <0.6.0-0"
default-features = false
features = [
    "describe-v1",
]

[dependencies.greentic-types]
version = ">=0.5.0-dev, <0.6.0-0"
features = [
    "serde",
]

[dependencies.greentic-component]
version = ">=0.5.0-dev, <0.6.0-0"
features = [
    "prepare",
    "describe",
    "cli",
]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "blocking",
    "json",
    "rustls",
]

[dependencies.zip]
version = "8"
default-features = false
features = [
    "deflate",
]

[dependencies.oci-distribution]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
]

[dependencies.greentic-distributor-client]
version = ">=0.5.0-dev, <0.6.0-0"
features = [
    "http-runtime",
    "pack-fetch",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
]

[dev-dependencies]
httpmock = "0.8"
walkdir = "2"
blake3 = "1"
indexmap = "2"
greentic-secrets-api = ">=0.5.0-dev, <0.6.0-0"
async-trait = "0.1"
assert_cmd = "2"
predicates = "3"
criterion = "0.8"

[build-dependencies]
serde_json = "1.0"
