[package]
name = "dev-echo"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
target = "wasm32-wasip2"

[package.metadata.component.bindings]
world = "component"
path = "../../.."

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
serde_json = "1.0"

[dependencies.greentic-interfaces-guest]
version = "0.5"
default-features = false
features = [
    "component-node",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]
